force-app/main/default/objects/Agent_Work_Event__e/Agent_Work_Event__e.object-meta.xml
<CustomObject>
    <description>Created for Publishing Agent Work Events</description>
    <label>Agent Work Event</label>
    <pluralLabel>Agent WorkEvents</pluralLabel>
</CustomObject>