force-app/main/default/objects/Agent_Work_Event__e/fields/AcceptDateTime__c.field-meta.xml
<CustomField>
    <fullName>AcceptDateTime__c</fullName>
    <label>AcceptDateTime</label>
    <type>DateTime</type>
</CustomField>