force-app/main/default/objects/Agent_Work_Event__e/fields/CancelDateTime__c.field-meta.xml
<CustomField>
    <fullName>CancelDateTime__c</fullName>
    <label>CancelDateTime</label>
    <type>DateTime</type>
</CustomField>