force-app/main/default/objects/Agent_Work_Event__e/fields/CloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>CloseDateTime__c</fullName>
    <label>CloseDateTime</label>
    <type>DateTime</type>
</CustomField>