force-app/main/default/objects/Agent_Work_Event__e/fields/DeclineDateTime__c.field-meta.xml
<CustomField>
    <fullName>DeclineDateTime__c</fullName>
    <label>DeclineDateTime</label>
    <type>DateTime</type>
</CustomField>