force-app/main/default/objects/Agent_Work_Event__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>