force-app/main/default/objects/Agent_Work_Event__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>