force-app/main/default/objects/Agent_Work_Event__e/fields/PendingServiceRoutingId__c.field-meta.xml
<CustomField>
    <fullName>PendingServiceRoutingId__c</fullName>
    <label>PendingServiceRoutingId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>