force-app/main/default/objects/Agent_Work_Event__e/fields/PushTimeoutDateTime__c.field-meta.xml
<CustomField>
    <fullName>PushTimeoutDateTime__c</fullName>
    <label>PushTimeoutDateTime</label>
    <type>DateTime</type>
</CustomField>